--- a/app/src/main/res/layout/activity_sign.xml
+++ b/app/src/main/res/layout/activity_sign.xml
@@ -12,8 +12,7 @@
         app:cardCornerRadius="75dp"
         app:cardElevation="0dp"
         android:layout_marginTop="15dp"
-        android:layout_marginBottom="18dp"
-        >
+        android:layout_marginBottom="5dp">
         <ImageView
             android:id="@+id/addProfile"
             android:layout_width="match_parent"
@@ -22,6 +21,22 @@
             android:scaleType="centerCrop"
             />
     </androidx.cardview.widget.CardView>
+    <LinearLayout
+        android:id="@+id/addProfileText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        >
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_photo"
+            android:layout_marginRight="5dp"
+            />
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/addProfile"/>
+        </LinearLayout>
     <EditText
         android:id="@+id/inputNick"
         android:layout_width="230dp"
