--- a/app/src/main/res/layout/navigation_header.xml
+++ b/app/src/main/res/layout/navigation_header.xml
@@ -1,28 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="#8784FF"
         android:orientation="vertical">
-
-        <ImageView
+        <androidx.cardview.widget.CardView
             android:layout_width="150dp"
             android:layout_height="150dp"
+            app:cardCornerRadius="75dp"
+            app:cardElevation="0dp"
             android:layout_gravity="center"
-            android:paddingTop="40dp"
-            android:src="@drawable/account_circle"/>
-
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="5dp">
+            <ImageView
+                android:id="@+id/profileImg"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:src="@drawable/account_circle"
+                android:scaleType="centerCrop" />
+        </androidx.cardview.widget.CardView>
         <TextView
+            android:id="@+id/nav_nickname"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:paddingTop="20dp"
-            android:paddingBottom="10dp"
-            android:text="이름 받아와서 넣기"
+            android:paddingBottom="15dp"
             android:textAlignment="center"
+            android:textSize="20dp"
+            android:text="test"
+            android:textColor="@color/black"
             android:gravity="center"/>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
