--- a/app/src/main/res/layout/fragment_rank.xml
+++ b/app/src/main/res/layout/fragment_rank.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
+<RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
@@ -12,7 +12,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="\nWeekly Ranking"
-        android:textSize="50sp" />
+        android:textSize="50sp"
+        android:layout_centerHorizontal="true"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rv_profile"
@@ -23,6 +24,8 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toBottomOf="@id/weekly"
-        tools:listitem="@layout/item_recycler_ex" />
+        tools:listitem="@layout/item_recycler_ex"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="200dp"/>
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+</RelativeLayout>
