--- a/app/src/main/res/layout/fragment_run.xml
+++ b/app/src/main/res/layout/fragment_run.xml
@@ -1,55 +1,59 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MainActivity">
-
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="85dp"
-        android:layout_marginTop="90dp"
         android:text="music"
+        android:textStyle="bold"
         android:textSize="20sp"
-        android:textStyle="bold" />
+        android:layout_marginTop="90dp" />
 
     <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:src="@android:drawable/ic_media_play"
         android:id="@+id/buttonPlay"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:layout_alignParentLeft="true"
-        android:layout_marginLeft="150dp"
-        android:layout_marginTop="80dp"
-        android:src="@android:drawable/ic_media_play" />
+        android:layout_marginLeft="30dp"
+        android:layout_marginTop="80dp"/>
 
     <ImageButton
-        android:id="@+id/buttonStop"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_marginTop="80dp"
-        android:layout_marginRight="150dp"
-        android:src="@android:drawable/ic_media_pause" />
+        android:id="@+id/buttonStop"
+        android:src="@android:drawable/ic_media_pause"
+        android:layout_alignParentLeft="true"
+        android:layout_marginLeft="20dp"
+        android:layout_marginTop="80dp"/>
+    </LinearLayout>
 
     <TextView
         android:id="@+id/elapsedTimeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="100dp"
         android:text=""
         android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginTop="100dp"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"/>
 
     <LinearLayout
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
         android:layout_marginTop="80dp"
-        android:orientation="vertical">
+        android:layout_centerHorizontal="true">
 
         <Chronometer
             android:id="@+id/chronometer"
@@ -58,14 +62,37 @@
             android:layout_marginTop="100dp"
             android:gravity="center_horizontal"
             android:textSize="60dp" />
+        <TextView
+            android:id="@+id/distanceText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="20sp"
+            android:layout_below="@id/chronometer"
+            android:layout_marginTop="8dp"
+            android:layout_marginLeft="50dp"
+            android:layout_gravity="center_horizontal"/>
+        <TextView
+            android:id="@+id/realTimeDistanceText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Real-time Distance: 0.00 m"
+            android:textSize="16sp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp"
+            app:layout_constraintTop_toBottomOf="@id/distanceText"
+            android:layout_gravity="center_horizontal"/>
+
+
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
-            android:layout_marginTop="40dp"
             android:gravity="center_horizontal"
-            android:orientation="horizontal">
+            android:orientation="horizontal"
+            android:layout_marginTop="40dp"
+            >
 
             <Button
                 android:id="@+id/startButton"
@@ -91,20 +118,19 @@
 
 
         <LinearLayout
-            android:id="@+id/weather"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_gravity="center_horizontal"
+            android:id="@+id/weather"
             android:layout_below="@+id/chronometer"
-            android:layout_marginLeft="40dp"
             android:layout_marginTop="50dp"
-            android:orientation="horizontal">
+            >
 
             <TextView
                 android:id="@+id/cityText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginLeft="25dp"
                 android:textSize="24sp"
                 android:textStyle="bold" />
 
@@ -112,30 +138,30 @@
                 android:id="@+id/temperatureText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/cityText"
-                android:layout_centerHorizontal="true"
-                android:layout_marginLeft="10dp"
                 android:textSize="36sp"
-                android:textStyle="bold" />
-
+                android:textStyle="bold"
+                android:layout_marginStart="10dp"
+                android:layout_centerHorizontal="true"/>
             <TextView
                 android:id="@+id/statusText"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/weather"
-                android:layout_marginLeft="18dp"
-                android:textSize="20sp" />
+                android:textSize="20sp"
+                android:layout_marginStart="18dp"
+                />
         </LinearLayout>
+
 
 
         <TextView
             android:id="@+id/updatedText"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:textSize="20sp"
             android:layout_below="@id/statusText"
-            android:layout_marginLeft="50dp"
             android:layout_marginTop="8dp"
-            android:textSize="20sp" />
+            android:layout_gravity="center_horizontal"
+            />
     </LinearLayout>
 
 </RelativeLayout>
