--- a/app/src/main/res/layout/item_recycler_ex.xml
+++ b/app/src/main/res/layout/item_recycler_ex.xml
@@ -1,37 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:tools="http://schemas.android.com/tools"
     android:paddingHorizontal="20dp"
-    android:paddingVertical="10dp">
-
+    android:paddingVertical="10dp"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-        <TextView
-            android:id="@+id/tv_rv_age"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
-            android:text="나이"
-            android:textColor="@color/black"
-            android:textSize="40sp" />
-
-        <TextView
-            android:id="@+id/tv_rv_name"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="5dp"
-            android:text="이름"
-            android:textColor="@color/black"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            app:layout_constraintLeft_toRightOf="@id/tv_rv_age" />
+        android:layout_height="wrap_content"
+        tools:ignore="MissingConstraints">
+    <TextView
+        android:id="@+id/tv_rv_age"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="나이"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="20dp"
+        android:textSize="40sp"
+        android:textColor="@color/black"
+        />
+            <TextView
+                android:layout_marginTop="5dp"
+                android:id="@+id/tv_rv_name"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="이름"
+                android:textStyle="bold"
+                android:layout_marginLeft="20dp"
+                android:textSize="24sp"
+                android:textColor="@color/black"
+                app:layout_constraintLeft_toRightOf="@id/tv_rv_age"/>
     </LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
