--- a/app/src/main/res/layout/fragment_setting.xml
+++ b/app/src/main/res/layout/fragment_setting.xml
@@ -12,22 +12,20 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:paddingTop="80dp"
-        android:paddingBottom="80dp"
+        android:paddingBottom="50dp"
         android:text="@string/nav2"
         android:textSize="35dp"
         android:textStyle="bold" />
 
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="200dp"
+        android:layout_height="100dp"
         android:orientation="horizontal"
         android:gravity="center">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:paddingTop="80dp"
-            android:paddingBottom="80dp"
+            android:layout_gravity="center"
             android:text="@string/alarm"
             android:textSize="25dp"
             android:textStyle="bold" />
